Nueva clase TRIP y modelado de datos de CSV a java